--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         myFunction(3, 4);
         myFunction(122,150);
         myFunction(15,33);
-        myFunction2(11,23);
+        myFunction(11,23);
     </script>
 
   </body>
